aws_ec2/network-routes.tf
resource "aws_route" "privateToHcp" {
  for_each               = toset(module.vpc.private_route_table_ids)
  route_table_id         = each.key
  destination_cidr_block = data.terraform_remote_state.hcp_consul.outputs.hvn_cidr_block
  transit_gateway_id     = data.terraform_remote_state.aws_usw_dev_tgw.outputs.ec2_transit_gateway_id
  depends_on = [module.vpc]
}
# VPC public subnet route to HCP CIDR Block
resource "aws_route" "publicToHcp" {
  for_each               = toset(module.vpc.public_route_table_ids)
  route_table_id         = each.key
  destination_cidr_block = data.terraform_remote_state.hcp_consul.outputs.hvn_cidr_block
  transit_gateway_id     = data.terraform_remote_state.aws_usw_dev_tgw.outputs.ec2_transit_gateway_id
}
resource "aws_route" "allVpcPublic" {
  for_each               = toset(module.vpc.public_route_table_ids)
  route_table_id         = each.key
  destination_cidr_block = "10.21.0.0/16"
  transit_gateway_id     = data.terraform_remote_state.aws_usw_dev_tgw.outputs.ec2_transit_gateway_id
}
resource "aws_route" "allVpcPrivate" {
  for_each               = toset(module.vpc.private_route_table_ids)
  route_table_id         = each.key
  destination_cidr_block = "10.21.0.0/16"
  transit_gateway_id     = data.terraform_remote_state.aws_usw_dev_tgw.outputs.ec2_transit_gateway_id
}
